--- a/PetNaturals/vite-project/package.json
+++ b/PetNaturals/vite-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "sass": "^1.77.6"
   },
   "devDependencies": {
